Update for recent feature